use word-break: break-word for learn page to prevent overflow

--- a/src/pages/Learn/Learn.module.scss
+++ b/src/pages/Learn/Learn.module.scss
@@ -6,14 +6,12 @@
 .wrapper {
   @extend .container;
   min-height: 50vh;
+  word-break: break-word;
+
 
   .form {
     @extend .form;
-    width: 600px;
-    p{
-      word-break: break-word;
-
-    }
+    max-width: 80vw;
 
     img {
       height: auto;
